# qibo-core

./: .gitignore  CMakeLists.txt  Cargo.toml  Justfile  README.md  flake.nix  pyproject.toml
.github/workflows/: py-wheels.yml  test.yml  wheels.yml
crates/: README.md
crates/c/: .gitignore  Cargo.toml  Justfile  README.md  build.rs  cbindgen.toml  meson.build
crates/c/examples/: .gitignore  Justfile  Makefile  circuit.c  compile.sh  draw.c  execute.c  meson.build
crates/c/examples/circuit/: build.rs  example.c  main.rs
crates/c/examples/microsimulator/: microsim.c  microsim.h
crates/c/microsimulator/: microsim.c
crates/c/src/: lib.rs
crates/cxx/: CMakeLists.txt  Cargo.toml  README.md
crates/cxx/src/: lib.rs
crates/py/: .gitignore  Cargo.toml  pyproject.toml
crates/py/examples/: circuit.py  gate.py
crates/py/qibo-core-py/qibo_core/: __init__.py  config.py
crates/py/qibo_/: README.md  pyproject.toml
crates/py/qibo_/qibo_/models/: qft.py
crates/py/qibo_core/: einsum_utils.py  measurements.py  npmatrices.py  numpy.py  result.py
crates/py/src/: circuit.rs  gate.rs
crates/py/tests/: test_circuit.py
docs/: README.md  apis.md  structure.md
examples/: backend.rs  circuit.rs  execute.rs  gates.rs  qibo-backend-simple.rs
examples/backend/: README.md  main.rs  qibo-backend-echo.rs
examples/backends/: qibo-backend-numpy
qibo-core/: Cargo.toml
qibo-core-cxx/: CMakeLists.txt  Cargo.toml  Justfile
qibo-core-cxx/examples/: main.cc
qibo-core-py/: Cargo.toml  pyproject.toml
qibo-core-py/examples/: backend.py  circuit.py  gate.py  graph.ipynb
qibo-core-py/qibo_/qibo_/models/: qft.py
qibo-core-py/qibo_/tests/: test_qft.py
qibo-core-py/qibo_core/: __init__.py  backends.py  einsum_utils.py  measurements.py  numpy.py  result.py
qibo-core-py/src/: all.rs  backend.rs  circuit.rs  gate.rs  lib.rs
qibo-core-py/tests/: test_circuit.py
src/: backend.rs  circuit.rs  executor.rs  gate.rs  lib.rs  main.cc  prelude.rs  state.rs
src/backend/: address.rs  client.rs  execute.rs  message.rs  mod.rs  server.rs
src/gate/: mod.rs  more.rs  one.rs  single.rs  two.rs
src/qibo_core/: __init__.py  circuit.py  config.py
src/qibo_core/backends/: __init__.py  einsum_utils.py  numpy.py
src/qibo_core/gates/: __init__.py  abstract.py  channels.py  gates.py  measurements.py  special.py
