[workspace]
members = ["qibo-core-py"]

[workspace.package]
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
description = "Qibo framework core elements"
readme = "README.md"
categories = ["science"]
edition = "2021"
keywords = ["physics"]
license = "GPL-3.0-or-later"
repository = "https://github.com/qiboteam/qibo-core"
rust-version = "1.60.0"
version = "0.0.1"

[package]
name = "qibo-core"

authors.workspace = true
description.workspace = true
readme.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
katexit = "0.1.4"
ndarray = "0.15.6"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"

[dev-dependencies]
serde_json = "1.0.116"

[[example]]
name = "qibo-backend-echo"
path = "examples/backend/qibo-backend-echo.rs"
