[tool.poetry]
name = "qibo-core"
version = "0.0.1"
description = "Core Qibo elements"
authors = ["The Qibo team"]
readme = "README.md"
packages = [{ include = "qibo_core", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8,<3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
