[tool.poetry]
name = "qibo-core"
version = "0.0.1"
description = "Core Qibo elements"
authors = ["The Qibo team"]
readme = "README.md"
packages = [{ include = "qibo_core", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
numpy = "^1.26.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
