[package]
name = "qibo-core-py"

authors.workspace = true
description.workspace = true
readme.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "qibo_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21.1", features = ["experimental-declarative-modules"] }
qibo-core = { version = "0.0.1", path = ".." }
