[package]
name = "qibo-core-c"

authors.workspace = true
description.workspace = true
readme.workspace = true
categories.workspace = true
edition.workspace = true
keywords.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
qibo-core = { version = "0.0.1", path = "../.." }

[build-dependencies]
cbindgen = "0.26.0"

[features]
capi = []
