[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "qibo-core"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Rust",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
dependencies = ["numpy~=1.26", "scipy"]

[project.optional-dependencies]
dev = ["ipython", "pdbpp"]
test = ["pytest>7", "pytest-cov[all]", "qibo==0.2.7"]

[tool.maturin]
features = ["pyo3/extension-module"]
