[tool.poetry]
name = "qibo_"
version = "0.0.1"
description = ""
authors = ["Alessandro Candido <candido.ale@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.12"
qibo-core = { path = ".." }


[tool.poetry.group.test.dependencies]
pytest = "^8.1.1"
qibo = "0.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
